--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node-sass -o public/scss public/scss -w | nodemon app.js"
+    "start": "./run_sass_engine.sh | nodemon app.js"
   },
   "keywords": [
     "qr"
@@ -17,7 +17,6 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "find": "^0.2.9",
-    "node-sass": "^4.8.3",
     "qrcode-terminal": "^0.12.0",
     "require-dir": "^1.0.0"
   },
