--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Christoffer Ekblom",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "find": "^0.2.9",
+    "mongoose": "^5.0.15",
     "qrcode-terminal": "^0.12.0",
     "require-dir": "^1.0.0"
   },
